# echomic

./: .gitignore  README.md  docker-compose.yml  pubspec.yaml
.github/workflows/: android-build.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  compressor.h  echo_effect.h  eq5band.h  feedback_suppressor.h  frequency_shifter.h  high_pass_filter.h  jni_bridge.cpp  noise_gate.h  reverb.h
android/app/src/main/kotlin/com/dailightstudio/echomic/: AudioEnginePlugin.kt  MainActivity.kt
ios/: Podfile
ios/Runner/: AppDelegate.swift  AudioEngine.swift  AudioEnginePlugin.swift  Compressor.swift  EchoEffect.swift  FeedbackSuppressor.swift  FrequencyShifter.swift  HighPassFilter.swift  Info.plist  NoiseGate.swift  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: audio_engine.dart  home_screen.dart  main.dart
